# COMP5318Assignment

./: A1_Group3.ipynb  A1_Group3ConfusionMatrix.ipynb  A1_Group3_.ipynb  A1_Group3_boxplot.ipynb  A1_Group3_brian.ipynb  A1_Group3_combined.ipynb  A1_Group3_modifiedBoxplot.ipynb  COMP5318-assignment2-joel  COMP5318-assignment2-joel.ipynb  README.md  pyproject.toml
.ipynb_checkpoints/: A1_Group3_brian-checkpoint.ipynb  a1-group3-checkpoint.ipynb
Assignment 2/: A2.ipynb  COMP5318-assignment2-brian.ipynb  COMP5318-assignment2-joel.ipynb  COMP5318-assignment2-template-notebook-cnn.ipynb  COMP5318-assignment2-template-notebook.ipynb  trials_cnn.csv
Assignment 2/.ipynb_checkpoints/: COMP5318-assignment2-template-notebook-checkpoint.ipynb
